[package]
name = "ripfind"
version = "0.1.1"
authors = ["Matthias Diener <matthias.diener@gmail.com>"]
description = "A fast and lean replacement for the find command."
license = "MIT"
documentation = "https://github.com/matthiasdiener/ripfind"
homepage = "https://github.com/matthiasdiener/ripfind"
repository = "https://github.com/matthiasdiener/ripfind"

[dependencies]
walkdir = "2"
regex = "1"

[[bin]]
bench = false
path = "src/main.rs"
name = "rf"
