[package]
name = "ripfind"
version = "0.4.1"
readme = "README.md"
authors = ["Matthias Diener <matthias.diener@gmail.com>"]
description = "A fast and lean replacement for the find command."
license = "MIT"
documentation = "https://github.com/matthiasdiener/ripfind"
homepage = "https://github.com/matthiasdiener/ripfind"
repository = "https://github.com/matthiasdiener/ripfind"
edition = "2021"

[dependencies]
walkdir = "2"
regex = "1"
getopts = "0.2"
colored = "2"

[[bin]]
bench = false
path = "src/main.rs"
name = "rf"
